[gd_scene load_steps=4 format=3 uid="uid://bwnx34yube8jt"]

[ext_resource type="Script" path="res://Scripts/Sticky.gd" id="1_krdnc"]
[ext_resource type="Texture2D" uid="uid://d3p0mbd8wvcs7" path="res://Assets/Sprites/Custom/PlayerBlock.png" id="2_e0qm5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s1rdk"]
size = Vector2(18, 18)

[node name="Sticky" type="Area2D"]
script = ExtResource("1_krdnc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_s1rdk")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_e0qm5")

[node name="StickCheckU" type="RayCast2D" parent="."]
target_position = Vector2(0, -9)
collide_with_areas = true

[node name="StickCheckD" type="RayCast2D" parent="."]
target_position = Vector2(0, 9)
collide_with_areas = true

[node name="StickCheckL" type="RayCast2D" parent="."]
target_position = Vector2(-9, 0)
collide_with_areas = true

[node name="StickCheckR" type="RayCast2D" parent="."]
target_position = Vector2(9, 0)
collide_with_areas = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
